# llama-webchat

./: .gitignore  Cargo.toml  README.md
src/: main.rs  routes.rs
static/: index.css
templates/: index.html.tera
